# Autonomous-Car-Parking-Bot

./: .gitignore  README.md  car-parking-bot-.gitignore  car-parking-bot-ARCHITECTURE.md  car-parking-bot-PROJECT_PROPOSAL.md  car-parking-bot-requirements.txt  car_parking_readme.md  frames_2025-11-09_21.05.35.gv
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/log/: latest_build
ros_ws/src/parking_manipulation/: setup.cfg  setup.py
ros_ws/src/parking_navigation/: setup.cfg  setup.py
ros_ws/src/parking_perception/: setup.cfg  setup.py
ros_ws/src/parking_prd_bringup/: CMakeLists.txt
ros_ws/src/parking_prd_bringup/launch/: lot_with_overhead.launch.py  robot_with_sensors.launch.py
ros_ws/src/parking_robot_control/: CMakeLists.txt  package.xml
ros_ws/src/parking_robot_description/: CMakeLists.txt
ros_ws/src/parking_robot_description/urdf/: robot_base.urdf.xacro
ros_ws/src/parking_sensors/: CMakeLists.txt
ros_ws/src/parking_tasks/: package.xml  setup.cfg  setup.py
ros_ws/src/parking_utils/: package.xml  setup.cfg  setup.py
ros_ws/src/parking_world/: CMakeLists.txt  package.xml
ws1/src/parking_lot_sim/: package.xml  setup.py
ws2/src/parking_lot_sim/: setup.cfg
ws2/src/towing_sim/: package.xml  setup.cfg  setup.py
ws2/src/towing_sim/config/: lift_controller.yaml
ws2/src/towing_sim/launch/: towing.launch.py
ws2/src/towing_sim/towing_sim/: car_detector.py  gap_approach.py  test_gazebo_service.py
ws2/src/towing_sim/urdf/: simple_car.urdf  towing_bot.urdf
ws2/src/towing_sim/worlds/: simple_parking.world
(+134 files in other folders)
